disable live data upload tests via a tag, make sure code reobust to related components being disabled